--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,29 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /*place-items: center;*/
   min-width: 320px;
   min-height: 100vh;
+  color: #2c3e50;
+}
+
+footer {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1;
+}
+
+.title {
+  text-align: center;
+  margin-top: 3rem;
+}
+
+.bpmn-highlight.bpmn-task  > rect {
+  fill: pink;
+  fill-opacity: 30%;
+  stroke: coral;
+}
+.bpmn-highlight.bpmn-task >rect:hover {
+  fill-opacity: 70%;
 }
