--- a/src/style.css
+++ b/src/style.css
@@ -7,11 +7,28 @@
 
 body {
   margin: 0;
-  display: flex;
-  /*place-items: center;*/
   min-width: 320px;
   min-height: 100vh;
   color: #2c3e50;
+}
+
+h1 {
+  margin-left: 1rem;
+}
+
+section {
+  display: flex;
+  place-items: center;
+}
+
+#bpmn-container {
+  height: 80vh;
+  width: 80vw;
+  overflow: hidden;
+  border-style: solid;
+  border-color: #b0b0b0;
+  border-width: .1rem;
+  border-radius: .2rem;
 }
 
 footer {
