--- a/src/style.css
+++ b/src/style.css
@@ -10,19 +10,25 @@ body {
   min-width: 320px;
   min-height: 100vh;
   color: #2c3e50;
-}
 
-h1 {
-  margin-left: 1rem;
-}
-
-section {
   display: flex;
   place-items: center;
   flex-direction: column;
 
   height: 100vh;
 }
+
+/*h1 {*/
+/*  margin-left: 1rem;*/
+/*}*/
+
+/*section {*/
+/*  display: flex;*/
+/*  place-items: center;*/
+/*  flex-direction: column;*/
+
+/*  height: 100vh;*/
+/*}*/
 
 #bpmn-container {
   height: 80vh;
@@ -41,11 +47,7 @@ footer {
   margin-bottom: 2rem;
 }
 
-.title {
-  text-align: center;
-  margin-top: 3rem;
-}
-
+/* Added dynamically with bpmn-visualization */
 .bpmn-highlight.bpmn-task  > rect {
   fill: pink;
   fill-opacity: 30%;
