--- a/src/style.css
+++ b/src/style.css
@@ -18,18 +18,6 @@ body {
   height: 100vh;
 }
 
-/*h1 {*/
-/*  margin-left: 1rem;*/
-/*}*/
-
-/*section {*/
-/*  display: flex;*/
-/*  place-items: center;*/
-/*  flex-direction: column;*/
-
-/*  height: 100vh;*/
-/*}*/
-
 #bpmn-container {
   height: 80vh;
   width: 80vw;
@@ -45,6 +33,7 @@ body {
 footer {
   margin-top: auto;
   margin-bottom: 2rem;
+  font-style: italic;
 }
 
 /* Added dynamically with bpmn-visualization */
