--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,18 @@ body {
   flex-direction: column;
 }
 
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.logo {
+  height: 3rem;
+  width: 3rem;
+  margin-right: .5rem;
+}
+
 #bpmn-container {
   height: 80vh;
   width: 80vw;
